@YELP_HELP_RULES@

HELP_ID = vinagre

HELP_MEDIA = \
	figures/vinagre-auth-needed.png	\
	figures/vinagre-connect-dialog.png \
	figures/vinagre-connected.png \
	figures/vinagre-connection-closed.png \
	figures/vinagre-fullscreen.png \
	figures/vinagre-no-scaling.png \
	figures/vinagre-reverse-connections.png \
	figures/vinagre-scaling.png

HELP_FILES = \
	connect.page \
	connect-file.page \
	fullscreen.page \
	index.page \
	introduction.page \
	keyboard-shortcuts.page \
	reverse-connections.page \
	scaling.page \
	take-screenshot.page \
	view-only.page

HELP_LINGUAS = de es eu gl hu sl
