include $(top_srcdir)/build-aux/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = vinagre

DOC_FIGURES = \
	figures/vinagre-auth-needed.png	\
	figures/vinagre-connect-dialog.png \
	figures/vinagre-connected.png \
	figures/vinagre-connection-closed.png \
	figures/vinagre-fullscreen.png \
	figures/vinagre-no-scaling.png \
	figures/vinagre-reverse-connections.png \
	figures/vinagre-scaling.png

DOC_PAGES = \
	connect.page \
	connect-file.page \
	fullscreen.page \
	index.page \
	introduction.page \
	keyboard-shortcuts.page \
	reverse-connections.page \
	scaling.page \
	take-screenshot.page \
	view-only.page

DOC_LINGUAS = de es eu fr gl hu sl

