@YELP_HELP_RULES@

HELP_ID = vinagre

HELP_MEDIA = \
	figures/vinagre-connected.png

HELP_FILES = \
	connect.page \
	connect-file.page \
	connect-reverse.page \
	fullscreen.page \
	index.page \
	introduction.page \
	keyboard-shortcuts.page \
	scaling.page \
	take-screenshot.page \
	view-only.page

HELP_LINGUAS = cs de el es eu fr fa gl hu lv ru sl
